Fixed form fields being cut off by nav bar

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,12 @@
 body {
-  padding: 50px;
+  padding-top: 70px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+}
+
+@media (max-width: 979px) {
+	body {
+		padding-top: 0px;
+	}
 }
 
 a {
